Updating archetype